src/Responsive/Responsive.css
:root{
  --buttonWidth : 20vw;
  --titleText : 3em;
  --fontsize : 1em;
}
/* MEDIUM SCREENS */

@media (max-width: 1200px){
  html{
    font-size: calc(0.5rem + 0.5vw);
  }
  #DetailCard{
    width: 70vw;
  }
  #notice {
    position: relative;
    z-index: 2;
    width: 60vw;
    margin-left: auto;
    margin-right: auto;
  }

  .glassCards#image{
    position: static;
    display: none;
  }
  .grid-container {
    grid-template-columns: repeat(2, 1fr); 
  }

  #ImgDetailCard  .idcContent{
    flex-direction: column-reverse;
    margin-left: 0vw;
    align-items: center;
    justify-content: center;
  }

  #ImgDetailCard  .idcContent .cardActions{
    transform: rotate(0deg);
    margin-top: 2em;
  }

  div.aboutUsContent div.glassCards#MembersCard,
  div.aboutUsContent div.glassCards#MembersCard.shorter,
  div.aboutUsContent div.glassCards#MembersCard.longer{
    opacity: 0;
    pointer-events: none;
    transition: all .2s;
    padding: 3vw;
    min-height: 40vh;
    height: auto;
    top: auto;
    background: var(--color4aA);
    bottom: 0;
  }

  div.glassCards#MembersCard> div.membersList{
    padding: 0vw;
    height: auto;
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
  }
  #membersButton{
    display: flex;
  }
  .showMore{
    display: none;
  }

  .aboutUsContent .aboutUsText{
    width: 100%;
  }
  .aboutUsContent{
    align-items: center;
  }
}

/* SMALL SCREENS */

@media (min-width: 0px) and (max-width: 800px) {


  .NavContents{
    width: 70vw;
  }
  .EventLogo{
    background-color: var(--color3A);
  }
  .EventLogoinner:hover{
    background-color: var(--color3);
    border-radius: 15%;
  }
  .EventLogo:hover a .eventName {
    width: 0vw;
}

  div.aboutUsContent div.membersToggle div.glassCards#MembersCard{
      position: fixed;
      width: 100vw;
      height: 100vh;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      border-radius: 0;
      background: transparent;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
  }
  div.membersList{
      display: flex;
  }
  
  /* #membersButton button{ */
  /*     z-index: 0; */
  /* } */
  .contactUsContent{
    display: flex;
    justify-content: space-around;
    align-items: center;
  }
  .contactUs {
    padding-left: 5vw;
    padding-right: 5vw;
  }
  .contactUsTitle {
    font-size: var(--titleText);
   }
   
  .contactUsContent img{
    display: none;
  }
  .moreinfo{
    font-size: 1.3rem;
    width: 40vw;
    padding: 10px;
  }
  
  .contactUsContent>form input, .contactUsContent>form textarea{
    font-size: 1.5rem;
    width: 50vw;
    padding: 2rem;
  }
  #send{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 4vh;
    width: 9vh;
  }
  /*  */
  .aboutUs{
    padding-left: 5vw;
    padding-right: 5vw;
    margin: 3vw;
  }

  .aboutUs img{
    display: none;
  }
  
  .aboutUsTitle {
    font-size: var(--titleText);
    margin-bottom: 1em;
  }
  .aboutUsContent{
    padding: 1em;
  }
  .aboutUsText p{
    padding: 0.5rem;
    font-size: var(--fontsize);
  }
  
  .aboutUsText {
    margin-bottom: 3em;
  }
  #membersButton button{
    width: var(--buttonWidth);
    display: flex;
    justify-content: center;
    font-size: 1.5em;
    padding-left: 3em;
    padding-right: 3em;
  }
  /*  */
  .pageContent{
    margin: 3vw;
  }
  .pageContent #image{
    display: none;
  }
  .pageContent > .glassCards{
    margin: auto;
  }
  #noticeContent{
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  nav.NavContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1em;
    justify-content: center;

  }
  nav.NavContainer .NavItems{
    background-color: var(--color4aA);
    width: 50%;
    border: 1px solid var(--color3A);
    /* box-shadow: inset 0px 0px 1rem 1rem var(--color3A), 0px 0px 1rem 1rem var(--color3A); */
    position: static;
    transform: none;
    justify-content: center;
    margin: 0;
    border-radius: 1vh;
    transition: 0.2s ease;
  }
  nav.NavContainer .NavItems:first-child{
    border-radius: 4vh 4vh 1vh 1vh ;
  }
  nav.NavContainer .NavItems:last-child{
    border-radius: 1vh 1vh 4vh 4vh ;
  }
  nav.NavContainer .NavItems:hover{
    background-color: var(--color4aA);
    border: none;
  }
  nav.NavContainer .NavItems > .NavItemIcons{
    display: none;
  }
  
}

/* SUPER SMALL SCREENS */

@media (max-width: 650px) {

  .grid-container {
    grid-template-columns: 1fr;  /* Single column for mobile */
  }

  .projectDetailsCard{
    flex-direction: column;
  }
  .projectDetailsCard hr{
    display: none;
  }
  #notice {
    margin-left: auto;
    margin-right: auto;
      border-radius: 12vw;
      padding: 2em;
  }
  #DetailCard{
    flex-direction: column;
  }
  #noticeContent{
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  #formContent label{
    font-size: 1em;
  }
}

/**/
/* } */
/* @media (max-width: 1200px) { */
/**/
/*   .glassCards#circleButtons{ */
/*   } */
/*   .tablet{ */
/*     max-width: 25vw; */
/*   } */
/* } */
/**/
/**/
/* @media screen and (max-width: 1500px) { */
/*   .aboutUsContent{ */
/*     display: flex; */
/*     flex-direction: column; */
/*     align-items: center; */
/*   } */

